# md-ref-checker

./: .cursorrules  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  check_references.py  mypy.ini  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: DEVELOPMENT.md
src/: __init__.py  check_references.py  cli.py  utils.py
src/checker/: __init__.py  __main__.py  checker.py  cli.py  file_scanner.py  ignore_rules.py  models.py  path_resolver.py  reference_checker.py  reference_parser.py  report.py  utils.py
src/md_ref_checker/: __init__.py  checker.py  cli.py  models.py  parsers.py  utils.py
tests/: __init__.py  conftest.py  test_checker.py  test_cli.py  test_code_blocks.py  test_file_organization.py  test_file_scanner.py  test_ignore_rules.py  test_models.py  test_parsers.py  test_path_resolver.py  test_reference_checker.py  test_reference_parser.py  test_special_chars.py  test_statistics.py  test_unidirectional_links.py  test_utils.py  utils.py
tests/test_files/test_case_1/: existing_doc.md  test.md
tests/test_files/test_case_cli/: .mdignore  broken.md  draft.draft.md  normal.md  test1.md  test2.md
tests/test_files/test_case_cli/ignored/: test.md
tests/test_files/test_case_code_blocks/: main.md  real_doc.md  valid_doc.md
tests/test_files/test_case_ignore/: .gitignore  .mdignore  draft_post.md  normal_doc.md  normal_post.md  post.draft.md  test.md
tests/test_files/test_case_ignore/_private/: secret.md
tests/test_files/test_case_ignore/normal_dir/: file.txt
tests/test_files/test_case_scanner/: temp.tmp
tests/test_files/test_case_scanner/docs/: doc1.md  doc2.md  index.md
tests/test_files/test_case_scanner/ignored/: draft.md
tests/test_files/test_case_special_chars/: doc&with&ampersands.md  special#chars.md
tests/test_files/test_case_special_chars/with spaces/: doc with spaces 2.md  doc with spaces.md
tests/test_files/test_case_special_chars/with spaces/and#hash/: doc#with#hash.md
tests/test_files/test_case_statistics/: a.md  b.md  c.md  doc1.md  doc2.md  doc3.md  index.md
tests/test_files/test_case_unidirectional/: doc_a.md  doc_b.md  doc_c.md  doc_d.md
