[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md-ref-checker"
version = "0.1.0"
description = "A tool for checking references in Markdown files"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["markdown", "reference", "checker", "obsidian"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "markdown-it-py>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/md-ref-checker"
Repository = "https://github.com/yourusername/md-ref-checker.git"

[project.scripts]
md-ref-checker = "md_ref_checker.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=md_ref_checker"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"] 